# F1FantasyPredictor

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt  run.sh  vercel.json
api/: index.py
data/: f1fantasy.db
f1fantasy/: __init__.py  api.py  backtest.py  chips.py  db.py  features.py  mapping.py  ml_model.py  optimizer.py  price_projection.py  recommend.py  risk.py  sprint.py
f1fantasy/ingestion/: fantasy.py  fastf1_pace.py  ingest.py  jolpica.py
f1fantasy/predictor/: base.py  heuristic.py  ml.py  naive.py
frontend/: index.html
frontend/src/: App.css  App.jsx
tests/: test_api.py  test_features.py  test_optimizer.py
