[project]
name = "f1fantasy"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.0",
    "fastf1>=3.8.3",
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "pulp>=3.3.2",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:pulp.*",
    "ignore::DeprecationWarning:starlette.*",
]
